@@ -1,5 +1,7 @@
 This file documents the revision history for Perl extension Catalyst.
 
+	- Support optional hashref as last param for parameters in uri_for.
+
 5.64    2006-02-07 20:29:00
         - Fixed bug in FastCGI proc manager mode where pm_post_dispatch
           was not run. (Eric Wong)
